# goodauto

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  requirements.txt
ansible/: adduser.yml  cron.yml  driver.yml  github.yml  gunicorn.yml  inventory  nginx.yml  packages.yml  playbook.yml  postgresql.yml
config/: ubuntu
config/nginx/: goodauto.by
config/systemd/: gunicorn.service
docs/: about.md  config  track.md
goodauto/: asgi.py  settings.py  urls.py  wsgi.py
goodauto/cars/: admin.py  apps.py  models.py  urls.py  views.py
parser/: parser.py
parser/scripts/: car_loader.py  catalog_handler.py  catalog_loader.py
sheduler/: admin.py  apps.py  crawler.py  cron.py  driver.py  links.json  models.py  parser.py  views.py
sheduler/migrations/: 0001_create_crawl_frontier.py  0002_create_parser_frontier.py  0003_alter_crawlfrontier_table_alter_parserfrontier_table.py  0004_rename_crawlfrontier_crawlerfrontier.py  0005_alter_crawlerfrontier_table_and_more.py  0006_crawlerfrontier_type_url_parserfrontier_type_url.py  0007_remove_crawlerfrontier_type_url_and_more.py
storage/: admin.py  models.py  url.py
storage/fixtures/: cars.csv
storage/migrations/: 0001_create_url_storage.py  0002_create_html_storage.py  0003_remove_related_name.py  0004_create_providers.py  0005_create_brands.py  0006_create_url_bunch.py  0007_rename_urlbunch_urlbunchstorage_and_more.py  0008_urltype.py  0009_htmlstorage_provider_htmlstorage_url_type_and_more.py  0010_alter_htmlstorage_table_alter_urlstorage_table.py  0011_remove_htmlstorage_url_type_delete_urltype.py  0012_remove_htmlstorage_provider_and_more.py  0013_urlstorage_type_url.py  0014_rename_type_url_urlstorage_type.py  0015_alter_htmlstorage_url_storage.py  0016_carmodel_remove_urlbunchstorage_brand_delete_brand_and_more.py  0017_alter_urlbunchstorage_table.py  0018_htmlbunchstorage.py  0019_urlbunchstorage_processed.py  0021_remove_urlstorage_type.py  (+6 more)
tests/: test_pull_numbers.py
(+24 files in other folders)
