[tool.poetry]
name = "goodauto"
version = "0.1.0"
description = ""
authors = ["Sergey Karpuk <sergeykarpuk@yandex.by>"]

[tool.poetry.scripts]
catalog-loader = "parser.scripts.catalog_loader:main"
catalog-handler = "parser.scripts.catalog_handler:main"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
python-dotenv = "^0.21.1"
bs4 = "^0.0.1"
lxml = "^4.9.2"
selenium = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
